# CLI-Standard-Structure

./: LICENSE  README.md  setup.cfg
mypackage/: mymodule.py
