[metadata]
name = mypackage
version = 0.0.0
author =
author_email =
description = This responsible for
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = mypackage

[options.entry_points]
console_scripts =
    my-application = magic_env.mymodule:my_function
    another-application = magic_env.mymodule:another_function